Added integration tests for auth client